antex-rs/tui/src/external_agent_config_migration/snapshots/antex_tui__external_agent_config_migration__tests__external_agent_config_migration_prompt.snap
---
source: tui/src/external_agent_config_migration/mod.rs
assertion_line: 873
expression: rendered
---

  > Import setup
  Bring over supported setup from another coding agent.
  Antex may add files to your current project folder.
  Your existing setup will not be changed.
    [x] Tools & setup
        Settings, instructions, integrations, agents, commands, and skills
        Importing: Settings 1, Memory 1
    [x] Current project
        Add Antex files alongside your existing project files
        Importing: Plugins 6, Instructions 1
    [x] Chat sessions (1)
        Last 30 days of chats
        Importing: Chat sessions 1

  Selected 5 of 5 items.
  › 1. Import selected
    2. Customize selection
    3. Cancel
  Use ↑/↓ to move, enter to select, c to customize
